--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Seção Sobre Mim -->
     <section id="sobre">
       <h2>Sobre Mim</h2>
-      <p>Olá! Eu sou estudante de Bacharelado em Ciência da Computação no IME-USP. No final do semestre, vou compartilhar o que aprendi nas trilhas e meu plano para o BCC.</p>
+      <p>Sou um estudante do Bacharelado em Ciência da Computação no IME-USP. No fim do semestre, vou compartilhar o que aprendi nas trilhas e o meu plano para o BCC.</p>
     </section>
 
     <!-- Seção Trilhas -->
