--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Página Pessoal - Caio Nicoluzzi Vieira - 14562960</title>
+  <title>Página Pessoal - Caio Nicoluzzi Vieira</title>
 </head>
 <body>
   <header>
-    <h1>Caio Nicoluzzi Vieira</h1>
+    <h1>Caio Nicoluzzi Vieira - 14562960/h1>
   </header>
   <main>
     <!-- Seção Sobre Mim -->
