--- a/index.html
+++ b/index.html
@@ -3,35 +3,76 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Página Pessoal - Caio Nicoluzzi Vieira</title>
+  <title>Caio Nicoluzzi Vieira - Caminhos no BCC</title>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; color: #333; }
+    header, footer { background: #f4f4f4; padding: 20px; text-align: center; }
+    nav ul { display: flex; justify-content: center; gap: 20px; padding: 0; margin: 0; list-style: none; }
+    nav a { text-decoration: none; color: #0066cc; }
+    main { padding: 20px; max-width: 800px; margin: auto; }
+    section { margin-bottom: 40px; }
+    h1, h2 { margin-top: 0; }
+    ul, ol { margin-left: 20px; }
+    a { color: #0066cc; }
+  </style>
 </head>
 <body>
   <header>
-    <h1>Caio Nicoluzzi Vieira - 14562960</h1>
+    <h1>Caio Nicoluzzi Vieira</h1>
+    <p>NUSP 14562960 – Bacharel em Ciência da Computação, IME-USP</p>
+    <p>Vice-presidente do <strong>IMEsec</strong> | Interesses: Finanças Computacionais, Ciência de Dados e Cibersegurança</p>
   </header>
+
+  <nav>
+    <ul>
+      <li><a href="#sobre">Sobre Mim</a></li>
+      <li><a href="#trilhas">Trilhas</a></li>
+      <li><a href="#planejamento">Planejamento</a></li>
+    </ul>
+  </nav>
+
   <main>
-    <!-- Seção Sobre Mim -->
     <section id="sobre">
       <h2>Sobre Mim</h2>
-      <p>Sou um estudante do Bacharelado em Ciência da Computação no IME-USP. No fim do semestre, vou compartilhar o que aprendi nas trilhas e o meu plano para o BCC.</p>
+      <p>Olá! Me chamo Caio Nicoluzzi Vieira e estudo Ciência da Computação no IME-USP. Atualmente sou vice-presidente do <strong>IMEsec</strong>, o grupo interno de cibersegurança, onde ajudo a organizar e conduzir iniciativas como o CyberCafe e o Hello, Linux!. Nessas atividades, compartilho conhecimento sobre segurança de sistemas e animo a comunidade a adotar boas práticas. Busco sempre aprender de forma prática, desenvolvendo projetos e participando de eventos relacionados à segurança.</p>
+      <p>Meus principais interesses são:</p>
+      <ul>
+        <li><strong>Finanças Computacionais:</strong> explorar como algoritmos e técnicas de otimização podem melhorar decisões de investimento.</li>
+        <li><strong>Ciência de Dados:</strong> entender todo o fluxo de dados, desde a coleta e engenharia até a análise de informações.</li>
+        <li><strong>Cibersegurança:</strong> estudar criptografia, defesa de redes e métodos para proteger sistemas contra ataques.</li>
+      </ul>
+      <p>Para descobrir meu melhor caminho, vou experimentar disciplinas de cada área e avaliar o aprendizado em prática.</p>
     </section>
 
-    <!-- Seção Trilhas -->
     <section id="trilhas">
-      <h2>Trilhas</h2>
-      <p>Em breve vou comentar sobre o que achei das trilhas oferecidas pela disciplina.</p>
+      <h2>Trilhas & Disciplinas</h2>
+      <p>As trilhas estruturadas pela disciplina dão uma visão geral de algumas áreas, mas não se alinham totalmente com meus interesses. Por isso, ao invés de decidir seguir necesssáriamente alguma trilha especìfica, eu selecionei disciplinas que me permitem explorar diferentes temas antes de escolher minha especialização:</p>
+      <ul>
+        <li><strong>MAC0466 – Teoria dos Jogos Algorítmica</strong><br>Quero entender como modelar interações estratégicas e como essas técnicas se aplicam a sistemas distribuídos.</li>
+        <li><strong>MAC0336 – Criptografia para Segurança de Dados</strong><br>Essa disciplina mostra as bases da criptografia e importantes métodos para proteger dados críticos.</li>
+        <li><strong>MAC0459 – Ciência e Engenharia de Dados</strong><br>Vou aprender a montar pipelines de dados, limpar e transformar grandes volumes para análise.</li>
+        <li><strong>MAC0317 – Processamento de Sinais Digitais</strong><br>Aqui estudo algoritmos para tratar sinais, com aplicações em reconhecimento de padrões e visão computacional.</li>
+        <li><strong>MAC6988 – Cibersegurança</strong><br>Aborda ameaças reais, defesa de redes e políticas de segurança, complementando minha prática no IMEsec.</li>
+        <li><strong>MAC0419 – Métodos de Otimização em Finanças</strong><br>Enfoca técnicas de otimização aplicadas ao mercado financeiro, alinhadas ao meu interesse em finanças.</li>
+      </ul>
+      <p>A cada semestre, avalio o conteúdo, faço anotações e registro projetos práticos para decidir quais áreas combinam mais com meu perfil.</p>
     </section>
 
-    <!-- Seção Planejamento -->
     <section id="planejamento">
       <h2>Planejamento</h2>
-      <p>Aqui vou detalhar o caminho que pretendo seguir no Bacharelado em Ciência da Computação.</p>
+      <p>Meu plano de estudo e carreira está dividido em três fases:</p>
+      <ol>
+        <li><strong>Explorar:</strong> no início, cursar as disciplinas selecionadas e participar de atividades práticas. Vou registrar minhas impressões e comparar experiências.</li>
+        <li><strong>Definir:</strong> após experimentar, escolher uma ou duas áreas que mais me interessarem. Em seguida, buscar projetos, iniciação científica ou estágios para aprofundar o conhecimento.</li>
+        <li><strong>Especializar:</strong> na reta final, focar em um tema específico, desenvolver o Trabalho de Conclusão de Curso (TCC) e, se possível, publicar em eventos ou periódicos.</li>
+      </ol>
+      <p>Esse método me ajuda a manter flexibilidade e adaptar meu percurso conforme descubro novas oportunidades e afinidades.</p>
     </section>
   </main>
 
-  <!-- Rodapé -->
   <footer>
-    <p>Contato: <a href="mailto:caionv@usp.br">caionv@usp.br</a></p>
+    <p>Desenvolvido por Caio Nicoluzzi Vieira | <a href="mailto:caionv@usp.br">caionv@usp.br</a></p>
   </footer>
 </body>
 </html>
+
